--- a/GymTrack/Views/Home/Index.cshtml
+++ b/GymTrack/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "GymTrack App";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome to you GymTrack Web App</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is the basic of a big application where you will be able to manage and keep track of your personal workout session, like creating your own template and adding exercises and categories for this. Everything you may need in your fitness journey</p>
+    <p>The type of data managed in this project is mostly integers and strings since the user only needs to add names and the amount of weight/series/reps and so on.</p>
+    <p>
+        <a asp-controller="Categories" asp-action="index">Create your exercise category!!</a><br />
+        <a asp-controller="" asp-action="index">Look and create your exercises!!</a><br />
+        <a asp-controller="" asp-action="index">Want to know more details? Click Here!</a><br />
+    </p>
+    
+    
+    
 </div>
