--- a/GymTrack/Views/Shared/_Layout.cshtml
+++ b/GymTrack/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - GymTrack - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p><small>Jose David De Los Reyes Osorio - Student number: 200499424 - Server-Side SCRIPTING-ASP.NET - COMP2084</small></p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
