Connection between pages created <a>

--- a/GymTrack/Views/Exercises/Index.cshtml
+++ b/GymTrack/Views/Exercises/Index.cshtml
@@ -39,3 +39,5 @@
 }
     </tbody>
 </table>
+
+<a asp-controller="ExerciseDetails" asp-action="index">Check your exercise details to create a routine!!</a>
