Auth added and AllowAnonymous users

--- a/GymTrack/Views/Home/Index.cshtml
+++ b/GymTrack/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     <p>The type of data managed in this project is mostly integers and strings since the user only needs to add names and the amount of weight/series/reps and so on.</p>
     <p>
         <a asp-controller="Categories" asp-action="index">Create your exercise category!!</a><br />
-        <a asp-controller="" asp-action="index">Look and create your exercises!!</a><br />
-        <a asp-controller="" asp-action="index">Want to know more details? Click Here!</a><br />
+        <a asp-controller="Exercises" asp-action="index">Look and create your exercises!!</a><br />
+        <a asp-controller="ExerciseDetails" asp-action="index">Want to know more details? Click Here!</a><br />
     </p>
     
     
