--- a/GymTrack/Views/Exercises/Index.cshtml
+++ b/GymTrack/Views/Exercises/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -30,11 +33,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Category.Name)
             </td>
+                @if (User.Identity.IsAuthenticated)
+                {
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ExerciseId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ExerciseId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ExerciseId">Delete</a>
             </td>
+                }
         </tr>
 }
     </tbody>
